--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,19 +3,19 @@ repos:
     hooks:
       - id: ruff-format
         name: ruff-format
-        entry: ruff format
+        entry: uv run ruff format
         language: system
         types: [python]
 
       - id: ruff
         name: ruff
-        entry: ruff check --fix --exit-non-zero-on-fix
+        entry: uv run ruff check --fix --exit-non-zero-on-fix
         language: system
         types: [python]
 
       - id: mypy
         name: mypy
-        entry: mypy --config-file=pyproject.toml
+        entry: uv run mypy --config-file=pyproject.toml
         language: system
         types: [python]
 
@@ -26,4 +26,3 @@ repos:
       - id: end-of-file-fixer
       - id: check-yaml
       - id: check-toml
-      - id: check-added-large-files
